# Task_Manager

./: .gitignore  pyproject.toml
apps/projects/: admin.py  models.py  permissions.py  serializers.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_remove_project_members_alter_project_id_and_more.py  0003_alter_projectmember_role.py
apps/tasks/: models.py  permissions.py  serializers.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_alter_task_id.py
backend/: conftest.py  pyproject.toml
backend/apps/projects/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_alter_project_id_alter_projectmember_id.py  0002_initial.py
backend/apps/projects/tests/: test_projects_api.py
backend/apps/tasks/: admin.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_alter_task_id.py  0002_initial.py  0003_task_deadline.py
backend/apps/tasks/templates/: index.html
backend/apps/tasks/tests/: test_tasks_api.py
backend/apps/users/: admin.py  models.py  pipeline.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/utils/: exceptions.py
backend/conf/: celery.py  settings.py  urls.py
conf/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: axios.js
frontend/src/pages/: Dashboard.jsx  Login.jsx
